# obs-backup-plugin

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: Build-Windows.ps1  build-macos
.github/workflows/: build-project.yaml  push.yaml
cmake/common/: buildspec_common.cmake
cmake/windows/: helpers.cmake
data/obs-plugins/FU-test-plugin/locale/: en-US.ini  ru-RU.ini
src/: plugin-main.cpp  test.cpp  test.hpp
